--- a/src/styles/CheckBox.css
+++ b/src/styles/CheckBox.css
@@ -9,11 +9,50 @@
     width: 18px;
   }
   
-
-  
   .checked-text {
     color: black; /* Cambia el color del texto cuando el checkbox está marcado */
   }
   
   /* Resto de tus estilos... */
+
+  input.custom {
+    position: relative;
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    border: 2px solid currentColor;
+    box-sizing: content-box;
+    color: #999999;
+    height: 10px;
+    width: 10px;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+    outline: none;
+  }
+  
+  input.custom:checked {
+    color: #35bcd9;
+  }
+  
+  input.custom::after {
+    content: "\2713"; /* Caracter Unicode para el checkmark */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 12px;
+    font-weight: bold; /* Hacer el checkmark más grueso */
+    line-height: 1; /* Alinear verticalmente el checkmark */
+    color: black; /* Color del checkmark */
+    background-color: transparent; /* Fondo transparente */
+    padding: 1px; /* Espaciado alrededor del checkmark */
+    border-radius: 1px; /* Redondeado menos pronunciado */
+    opacity: 0; /* Comienza oculto */
+    transition: opacity 0.3s ease;
+  }
+  
+  input.custom:checked::after {
+    opacity: 1; /* Muestra cuando está marcado */
+  }
   
