--- a/src/styles/InputAreas.css
+++ b/src/styles/InputAreas.css
@@ -10,3 +10,10 @@
     border: none;
     width: 100%;
 }
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
+  
+div.active{
+    border: 2px solid #35bcd9;
+}
