--- a/src/styles/GestionInformacion.css
+++ b/src/styles/GestionInformacion.css
@@ -1,3 +1,7 @@
+:root{
+    --Monserrat: 'Montserrat', sans-serif;
+    --WorkSans: 'Work Sans', sans-serif;
+}
 button.accordion-button::after {
     background-image: url('../assets/add-circle-svgrepo-com.svg');
 }
@@ -5,29 +9,47 @@ button.accordion-button:not(.collapsed)::after {
     background-image: url('../assets/remove-ellipse-svgrepo-com.svg');
 }
 .section-gestion-oime{
-    width: 450px; /* width de la base en donde se renderiza el acordeón */
-    min-height: 300px; 
+    width: 566px; /* width de la base en donde se renderiza el acordeón */
+    min-height: 470px; 
     background-color: white;
     border: 1px solid #35bcd9;
-    border-radius: 25px;
+    border-radius: 24px;
     font-size: 14px;
-    display: grid;
-    place-items: center;
-    padding: 20px 15px 6px 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    padding: 15px 18px;
 }
 .section-gestion-oime p > span, p {
+    font-family: var(--Monserrat);
+    font-size: 18px;
     color: black;
+    margin-bottom: 20px;
+    text-align: center;
 }
 .section-gestion-oime span {
     font-weight: bold;
 }
+.accordion-header{
+    width: 525px;
+    height: 59px;
+    display: grid;
+    place-items: center;
+}
 .accordion-header button{
+
     font-weight: bold;
     justify-content: space-between;
     gap: 15px;
 }
 button.accordion-button:not(.collapsed){
     box-shadow: inset 0 calc(-1 * 1px) 0 #35bcd9;  
+}
+div.accordion{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 .accordion, .accordion-item{
     width: 100%;
