--- a/src/styles/ViewsEstilos.css
+++ b/src/styles/ViewsEstilos.css
@@ -1,10 +1,10 @@
 :root{
     --Monserrat: 'Montserrat', sans-serif;
     --WorkSans: 'Work Sans', sans-serif;
+    --BluePrimary: #35BCD9;
 }
 .ContainerGlobal{
     width: 100%;
-/*     background-color: #d3d3d3; */
     display: flex;
     flex-direction: column;
     gap: 6px;
@@ -59,15 +59,10 @@ label{
     width: 50%;
 }
 button.accordion-button:focus:not(.collapsed){
-    box-shadow: inset 0 calc(-1 * 1px) 0 #35bcd9;
+    box-shadow: inset 0 calc(-1 * 1px) 0 var(--BluePrimary);
 }
-
-/* .accordion-collapse{
-    border-top: 1px solid #35bcd9;
-} */
-
 .accordion-header div.collapse.show {
-    border-bottom: 1px solid #35bcd9;
+    border-bottom: 1px solid var(--BluePrimary);
 }
 .accordion-header button.accordion-button{
     font-family: var(--Monserrat);
@@ -75,7 +70,7 @@ button.accordion-button:focus:not(.collapsed){
     font-size: 14px;
 }
 .accordion div.accordion-item {
-    border: 1px solid #35bcd9;
+    border: 1px solid var(--BluePrimary);
     margin-bottom: 5px;
     border-radius: 6px;
 }
@@ -89,7 +84,7 @@ span.css-1u9des2-indicatorSeparator{
     padding-left: 20px;
 }
 .contendeorBotones{
-    margin-top: 20px;
+    margin: 20px 0;
     display: flex;
     justify-content: flex-end;
 }
@@ -115,11 +110,14 @@ span.css-1u9des2-indicatorSeparator{
 
 /* Resultados desplegables oferta inmobiliaraia */
 
-.ContainerResultados{
+.ContainerScroll{
+    max-height: 250px;
+    overflow: auto; /* Habilita el desplazamiento cuando el contenido exceda el tamaño */
     margin-top: 10px;
     border-radius: 3px;
 }
 .encabezado{
+    width: 98%;
     display: flex;
     justify-content: space-between;
     font-family: var(--Monserrat);
@@ -131,7 +129,7 @@ span.css-1u9des2-indicatorSeparator{
 }
 .encabezado #enlace{
     font-size: 13px;
-    color: #35bcd9;
+    color: var(--BluePrimary);
     text-decoration: none;
     
 }
@@ -144,13 +142,17 @@ span.css-1u9des2-indicatorSeparator{
 .encabezado img{
     width: 20px;
 }
-.description{
+.description, .descriptionTwo{
     font-family: var(--WorkSans);
     display: flex;
     gap: 30px;
+    align-items: center;
 }
-.description p{
+.description p, .descriptionTwo p{
     font-size:14px;
+}
+.descriptionTwo p{
+    font-weight: 600;
 }
 .description h5{
     font-size: 12px;
@@ -165,12 +167,15 @@ span.css-1u9des2-indicatorSeparator{
     font-weight: 600;
 }
 .tipoOferta span{
-    color: #35bcd9;
+    color: var(--BluePrimary);
 }
 .containerTable{
     display: grid;
     justify-content: center;
 
+}
+.FirstTable{
+    margin-bottom: 15px;
 }
 table {
     border-collapse: collapse;
@@ -195,15 +200,15 @@ table {
   tr:last-child {
     border-bottom: none; /* No aplicar borde en la última fila */
   }
-
-/*   tr:nth-child(even) {
-    background-color: #f2f2f2; 
-  } */
-
   tr:nth-child(odd) {
     background-color: #ffffff; /* Color de fondo para filas impares */
   }
 
   td:first-child {
     padding-left: 15px; /* Espacio entre elementos */
+  }
+  .ContainerResultados{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
   }
